style.css
@media (prefers-color-scheme: light) {
    :root {
        --background: #fff;
        --foreground: rgb(240,240,240);
        --font: #282a36;
        --white: #fff;

        --link: #6272a4;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: rgb(24, 26, 27);
        --foreground: rgb(32, 35, 37);
        --font: rgb(202, 198, 191);
        --white: #000;

        --link: #6272a4;
    }
}

:root {
    --link: #6272a4;
}

#dark-mode-switch {
    border: 0;
    margin: 10px;
    position: fixed;
    top: 10px;
    right: 10px;
    z-index: 9999999;
    cursor: pointer;
    outline: none;
    background: none;
    user-select: none;
    transition: 0.3s ease;
}

*, *::after, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,sans-serif;
}

body {
    display: flex;
    color: var(--font);
    background-color: var(--background);

    transition:
        color 0.5s ease,
        background-color 0.5s ease;
}

.container-nav {
    float: left;
    height: 60px;
    transition: 0.3s ease-in-out;
    width: 60px;
}

.container-nav-showing {
    width: 300px;
    min-height: 100vh;
}

nav {
    background: var(--background);
    position: fixed;
    width: 60px;
    height: 60px;
    overflow: hidden;
    transition: 0.3s ease-in-out;
    z-index: 999;
}

@media only screen and (max-width: 768px) {
    nav {
        width: 100%;
    }
}

.nav-showing {
    width: 300px;
    height: 100vh;
    background: var(--foreground);
}

.menu-logo {
    text-align: center;
    font-size: 25px;
    padding: 20px;
    color: var(--font);
    background-color: var(--foreground);
    transition: 0.3s ease-in-out;
}

.menu-button {
    cursor: pointer;
    justify-content: center;
}

ul {
    list-style: none;
    width: 300px;
    opacity: 0;
    background-color: var(--foreground);
    transition: 0.2s ease-in-out;
}

@media only screen and (max-width: 830px) {
    .container-nav {
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
    }
}

@media only screen and (max-width: 768px) {
    .nav-showing, ul {
      width: 100%;
    }
}

ul li button {
    text-decoration: none;
    color: var(--font);
    background-color: var(--foreground);
    transition: 0.3s ease-in-out;
    display: flex;
    padding: 20px 20px;
    position: relative;
    outline: none;
    border: 0;
    width: 100%;
}

ul li button::after {
    content: "";
    bottom: 5px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: var(--font);
    width: 0px;
    height: 2px;
    border-radius: 5px;
    transition: 0.3s ease-in-out;
    opacity: .3;
}

ul li button:hover::after {
    width: 200px;
}

.ul-showing {
    opacity: 1;
}

.menu-toggle {
    height: 40px;
    width: 40px;
    border: 0;
    margin: 10px;
    position: relative;
    cursor: pointer;
    outline: none;
    background: none;
}

.menu-icon {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    width: 30px;
    height: 3px;
    border-radius: 10px;
    background: var(--font);
    transition: 0.2s ease-in-out;
}

.menu-icon::after {
    content: "";
    position: absolute;
    top: -10px;
    left: 0;
    width: 30px;
    height: 3px;
    border-radius: 10px;
    background: var(--font);
}

.menu-icon::before {
    content: "";
    position: absolute;
    top: 10px;
    left: 0;
    width: 30px;
    height: 3px;
    border-radius: 10px;
    background: var(--font);
}

.menu-icon-opened {
    width: 0px;
}
.menu-icon-opened::after {
    top: 50%;
    left: 50%;
    transform: rotate(45deg);
    transition: 0.2s ease-in-out;
}

.menu-icon-opened::before {
    top: 50%;
    left: 50%;
    transform: rotate(-45deg);
    transition: 0.2s ease-in-out;
}

footer {
    bottom: 0;
    width: fit-content;
    margin: 0 auto;
    padding: 20px 0 0 0;
    text-align: center;
    font-size: 0.8em;
    color: var(--font);
    transition: 0.3s ease-in-out;
}

.footer-button {
    color: var(--link);
    text-decoration: none;
    border-bottom: 1px solid var(--background);
    transition: border-bottom 0.3s ease-out;
}

.footer-button:hover, .footer-button:active {
    cursor: pointer;
    border-bottom: 1px solid var(--link);
    transition: border-bottom 0.3s ease-in;
}

.main-content {
    flex-grow: 1;
    padding: 20px;
}

#devices {
    width: inherit;
}

.device {
    position: relative;
    display: flex;
    min-height: calc(100vh - 20px);
    padding: 0 0 60px 0;
}

#neofetch {
    padding: 2em 0;
    display: flex;
    flex-direction: column;
    margin: auto auto auto 1em;
}

#neofetch > feature {
    font-size: 1.2em;
    color: #7c7c7c;
}

#neofetch > spec {
    margin-bottom: 1em;
    font-weight: 600;
}

#davinci > img {
    height: 30vw;
    width: auto;
    margin: auto 1em auto auto;
}

#device-name {
    margin-bottom: 10px;
}

.arrow-down {
    position: absolute;
    bottom: 30px;
    left: 50%;
    transform: translateX(-50%);
    width: 60px !important;
    height: 60px !important;
    font-size: 40px !important;
    animation: bouncing;
    animation-duration: 300ms;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    cursor: pointer;
    user-select: none;
}

@keyframes bouncing {
    0% {
    }
    100% {
        bottom: 20px;
    }
}

.downloads {
    width: clac(100% - 100px);
    background: var(--foreground);
    transition: 0.3s ease-in-out;
    border-radius: 50px;
    margin: 0 50px;
    padding: 40px;
}

@media only screen and (max-width: 768px) {
    .device {
        flex-direction: column;
    }

    .arrow-down {
        margin: 0 auto;
        width: 40px !important;
        font-size: 40px !important;
        animation: bouncing;
        animation-duration: 300ms;
        animation-iteration-count: infinite;
        animation-direction: alternate;
    }

    .downloads {
        padding: 30px;
        margin: 0;
    }

    #neofetch {
        width: 100%;
        padding: 0 10px;
        margin: 0;
    }

    #davinci > img {
        height: 80vw;
        width: auto;
        margin: 40px auto 20px auto;
    }
}

.collapsed-view {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
}

.collapsed-view > div {
    margin-top: 0.5em;
    margin-bottom: 1em;
}

.dropdown-arrow {
    border: 0;
    outline: none;
    padding: 10px;
    cursor: pointer;
    color: var(--font);
    background-color: var(--foreground);
    transition: 0.3s ease-in-out;
    user-select: none;
}

.expanded-view {
    opacity: 0;
    max-height: 0;
    overflow: hidden;
    transition: 0.3s ease-in-out;
}

.expanded-view-showing {
    opacity: 1;
    max-height: 500px;
    margin-bottom: 1em;
}

.rom-name-title {
    color: #7c7c7c;
    user-select: none;
}

.rom-name {
    font-size: 1.2em;
    color: var(--font);
    transition: 0.3s ease-in-out;
    user-select: none;
}

.stats {
    display: flex;
    flex-direction: column;
    padding: 1em;
}

.stats > h3, h4, h5 {
    font-weight: 400;
}

.stats > h3 {
    font-size: 1.2em;
}

.stats > h4 {
    margin-bottom: 1em;
}

.stats > h5 {
    font-size: .8em;
}

.download-button {
    background: var(--font);
    border: 1px solid var(--font);
    width: 120px;
    text-align: center;
    padding: 10px 0;
    color: var(--white);
    text-decoration: none;
    border-radius: 100px;
    margin-top: 15px;
    font-size: 15px;
    transition: 200ms ease-in-out;
}

.download-button:hover {
    background: 0;
    border: 1px solid var(--font);
    color: var(--font);
}

